<resources>
    <string name="app_name">PRUFF</string>
    <string name="login">LOGIN</string>
    <string name="username">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_pass">forgot password</string>
    <string name="welcome">Welcome friends!!</string>
    <string name="title_activity_first_open">FirstOpenActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>


    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="Phone">Phone number</string>
    <string name="dob">Date Of Birth</string>
    <string name="emailIdRegister">Email</string>
    <string name="PassRegister">Password</string>
    <string name="PassRegisterAgain">Re-enter Password</string>
    <string name="signUpReg">Register</string>


    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_email">Email</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
</resources>
