<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/lbl_forgot_password"
            android:textColor="#000000"
            android:textSize="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:text="@string/forgot_password_msg"
            android:textColor="#000000"
            android:textSize="14dp" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:layout_height="40dp"
                android:background="@drawable/edtext_style"
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:fontFamily="sans-serif-medium"
                android:textColor="#A9A9A9" />
        </android.support.design.widget.TextInputLayout>
        <!-- Login Button -->
        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/btn_reset_password"
            android:background="@drawable/btn_style"
            android:textColor="#000000"
            android:fontFamily="sans-serif-medium"/>
        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:text="@string/btn_back"
            android:textColor="@color/btn_register" />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
